# portdiff

./: CHANGELOG.md  Cargo.toml  README.md  bundle.js  index.html
.github/workflows/: deploy-viewer.yml  deploy.yml
src/: edges.rs  graph.rs  graph_view.rs  lib.rs  port.rs  port_diff.rs  portgraph.rs  subgraph.rs  unique_vertex.rs  vertex.rs
src/port_diff/: boundary.rs  extract.rs  merge.rs  port.rs  rewrite.rs  serial_edge_data.rs  squash.rs  traverser.rs
src/port_diff/snapshots/: portdiff__port_diff__extract__tests__extract_parent_two_children.snap  portdiff__port_diff__extract__tests__extract_parent_two_children.snap.new  portdiff__port_diff__extract__tests__hierarchy_graph.snap  portdiff__port_diff__rewrite__tests__extracted_graph_1.snap  portdiff__port_diff__rewrite__tests__extracted_graph_1.snap.new  portdiff__port_diff__rewrite__tests__extracted_graph_2.snap
src/snapshots/: portdiff__port_diff__tests__serialize.snap  portdiff__port_diff__tests__serialize_parent_child.snap  portdiff__port_diff__tests__serialize_parent_two_children.snap  portdiff__port_diff__tests__serialize_parent_two_children_overlapping.snap  portdiff__subgraph__tests__boundary_edge.snap  portdiff__subgraph__tests__boundary_no_edge.snap
test_files/: circ_rewrite.json  parent_child.json  parent_two_children.json  parent_two_children_overlapping.json
viewer/: .gitignore  README.md
viewer/react/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
viewer/react/public/: circuit_viewer.html
viewer/react/public/examples/: barenco_tof_5_full.json  barenco_tof_5_min.json  small_demo.json
viewer/react/src/: App.tsx  RFGraph.ts  boundary.ts  circuit_viewer.ts  config.ts  index.tsx  place_graph.ts  wasm_api.ts
viewer/react/src/app/: core.ts  layout.tsx  page.tsx  place_graph.ts
viewer/react/src/components/: CircuitViewer.tsx  DragDivider.tsx  HierarchyViewer.tsx  LoadView.tsx  MainView.tsx  PortDiffNode.tsx  PortDiffViewer.tsx  PortgraphNode.tsx  PortgraphViewer.tsx
viewer/react/src/components/port_diff_viewer/: CommitButton.tsx  EditModeButton.tsx  UpdatePorts.tsx  button.css  node_types.css  node_types.tsx
viewer/react/src/hooks/: useEditModeHandlers.ts  useEditModeHandlers.tsx  usePortDiffState.ts  useRemoveDoubleBoundaryEdges.ts  useUpdatePorts.ts
viewer/react/src/styles/: node_types.css
viewer/shared/: Cargo.toml
viewer/shared/src/: app.rs  lib.rs  model.rs  rfgraph.rs  view_serialise.rs
viewer/shared/src/capability/: log.rs
viewer/shared/src/view_serialise/: portgraph.rs  supported_formats.rs  tket.rs
viewer/shared_types/: Cargo.toml  build.rs
viewer/wasm/: Cargo.toml
viewer/wasm/src/: app_state.rs  data_serialization.rs  examples.rs  hierarchy.rs  lib.rs  port_diff_id.rs  portdiff_serial.rs  wasm_api.rs
