[package]
name = "portdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate = "0.12.0"
itertools = "0.13.0"
petgraph = "0.6.5"
portgraph = { version = "0.12.2", optional = true }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
insta = "1.39.0"
portgraph = "0.12.2"
rstest = "0.21.0"

[workspace]
members = ["viewer/wasm"]

[features]
portgraph = ["dep:portgraph"]
