[package]
name = "portdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
delegate = "0.12.0"
derive_more = "0.99.18"
itertools = "0.13.0"
petgraph = "0.6.5"
portgraph = { version = "0.12.2", optional = true }
relrc = { path = "../relrc", features = ["petgraph"] }
thiserror = "1.0.63"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
insta = "1.39.0"
portgraph = "0.12.2"
rstest = "0.21.0"

[workspace]
members = ["viewer/wasm"]

[features]
portgraph = ["dep:portgraph"]
