[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.5.0"
uniffi = "0.28.0"
wasm-bindgen = "0.2.92"
portdiff = { workspace = true, features = ["portgraph"] }
relrc = { workspace = true, features = ["serde"] }
portgraph = { workspace = true, features = ["serde"] }
serde_json = "1.0.122"
getrandom = { version = "0.2", features = ["js"] }
derive_more = { workspace = true }
petgraph = { workspace = true }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.28.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }
